--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@ author_profile: true
 header:
   image: /assets/images/background-change.jpg
 ---
+<!-- <img src="/assets/resume/1page_dark.png" alt="Ravi Riley 1 Page Resume"> -->
