--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: home-pinned
+<!-- layout: home-pinned -->
+layout: home
 author_profile: true
 header:
   image: /assets/images/background-change.jpg
