♻️ Replace site with redirect to raviriley.com

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
----
-<!-- layout: home-pinned -->
-layout: home
-author_profile: true
-header:
-  image: /assets/images/background-change.jpg
----
-<!-- <img src="/assets/resume/1page_dark.png" alt="Ravi Riley 1 Page Resume"> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<meta charset="utf-8">
+<title>Redirecting to https://raviriley.com</title>
+<meta http-equiv="refresh" content="0; URL=https://raviriley.com">
+<link rel="canonical" href="https://raviriley.com">
+<meta name="author" content="Ravi Riley">
+
+<style>
+  body {
+    background: #23272a;
+  }
+</style>
+
+</html>
